# loc

./: Cargo.toml  Readme-head.md  Readme.md  gen-md.sh
src/: file_info.rs  identify.rs  language.rs  line_kind.rs  main.rs  table.rs  walker.rs
