[package]
name = "loc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread", "fs", "io-util"] }
